# F1-Race-Forecasting

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: app.py
src/modules/: __init__.py  features.py  fetch.py  metrics.py  model.py  parse.py  visuals.py
src/utils/: __init__.py  constants.py  logs.py
