[project]
readme = "README.md"

[tool.autopep8]
ignore = ["E731"]
max_line_length = 168

[tool.isort]
case_sensitive = true
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_data = ["numpy", "pandas", "matplotlib", "seaborn"]
known_ml = ["sklearn", "scipy", "torch"]
known_typing = "typing"
line_length = 88
lines_between_sections = 1
multi_line_output = 3
order_by_type = true
reverse_relative = true
sections = ["FUTURE", "THIRDPARTY", "DATA", "ML", "TYPING", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pyright]
pythonVersion = "3.12.8"
typeCheckingMode = "basic"
